Imager release history.  Older releases can be found in Changes.old

Imager 0.79 - unreleased
===========

 - add Imager::Test to the POD coverage tests and document the missing
   functions.

 - the convert() method now optimizes the case where all output
   channels are either 0, sourced from a single input channel or 1.
   This significantly speeds up presets like "addalpha", "green".
   https://rt.cpan.org/Ticket/Display.html?id=51254

 - add wiggle.pl sample, as suggested by Dan Oppenheim.

 - add the combine() method to combine channels from multiple source
   images into a new image
   https://rt.cpan.org/Ticket/Display.html?id=11872

Bug fixes:

 - treat the co-efficients for convert() as doubles instead of floats.

 - If a higher (earlier) priority font handler failed to load, that
   would crash preventing loading of later font handlers.
   https://rt.cpan.org/Ticket/Display.html?id=62855

 - parse defines from the options returned by pkg-config --cflags
   https://rt.cpan.org/Ticket/Display.html?id=63223

 - a regen of the MANIFEST revealed that GIF and FT2 tests weren't
   included in the tarball.  They are now included.

Imager 0.78 - 4 Oct 2010
===========

Bug fixes:

 - don't access deprecated members of the png_structp.
   https://rt.cpan.org/Ticket/Display.html?id=60242

 - document that using color objects is faster than supplying colors
   by name, etc.
   https://rt.cpan.org/Ticket/Display.html?id=61047

 - Imager::Probe now accepts array references for incpath and libpath.
   https://rt.cpan.org/Ticket/Display.html?id=60244

Imager 0.77_02 - 27 Sep 2010
==============

 - moved Win32, FreeType 2 font support into sub-modules.
   https://rt.cpan.org/Ticket/Display.html?id=49616 (partial)
   Uses Imager::Probe now.
   https://rt.cpan.org/Public/Bug/Display.html?id=61328

 - tested successfully with jpeg-8b
   https://rt.cpan.org/Ticket/Display.html?id=60221

Bug fixes:

 - from _01: look for missing file support test files in the right